[TASK] Apply migration TYPO3.Flow-201209251426
This commit contains the result of applying migration
 TYPO3.Flow-201209251426.
to this package.

Migration: TYPO3.Flow-201209251426

--- a/composer.json
+++ b/composer.json
@@ -1,1 +1,17 @@
-{"name":"demo\/asset","type":"typo3-flow-package","description":"","version":"","require":{"typo3\/flow":"*"},"autoload":{"psr-0":{"Demo\\Asset":"Classes"}}}
+{
+
+	"name":"demo\/asset",
+	"type":"typo3-flow-package",
+	"description":"",
+	"version":"",
+	"require": {
+		"typo3\/flow":"*",
+		"typo3\/asset":"*",
+		"twig\/twig": "*"
+	},
+	"autoload": {
+		"psr-0": {
+			"Demo\\Asset":"Classes"
+		}
+	}
+}
